--- a/_posts/2021-02-02-设置github图床.md
+++ b/_posts/2021-02-02-设置github图床.md
@@ -1,14 +1,10 @@
-设置七牛图床
-
-![1](http://img.stxyg.online/images/1.jpg)
-
-github图床
+### github图床
 
 1. 建立新的resp
 
-2. 生成token：settings -> 
+2. 生成token：settings -> developer settings -> personal access tokens ...
 
-   <img src="C:/Users/Administrator/AppData/Roaming/Typora/typora-user-images/image-20210131195018309.png" alt="image-20210131195018309" style="zoom: 67%;" />
+   <img src="https://raw.githubusercontent.com/stxyg/imgs/main/picgoimage-20210131195018309.png" alt="image-20210131195018309" style="zoom: 67%;" />
 
    ![image-20210131195249756](https://raw.githubusercontent.com/stxyg/imgs/main/picgoimage-20210131195249756.png)
 
